--- a/src/Components/header/Header.css
+++ b/src/Components/header/Header.css
@@ -16,7 +16,8 @@ a {
   padding: 0 20px;
   background-color: #5b9b6e;
   color: #f8f3f3;
-  z-index: 99;
+  position: relative;
+  z-index: 1;
 }
 .header-content {
   overflow: hidden;
@@ -202,10 +203,10 @@ a {
   background-color: #0c441d;
   border: 1px solid #0c441d;
   overflow-y: scroll;
-  position: fixed;
+  position: absolute;
   top: 90px;
-  left: -100%;
-  z-index: 999;
+  left: 0;
+  z-index: 2;
   transition: 0.7s ease-in-out;
   -webkit-transition: 0.7s ease-in-out;
   -moz-transition: 0.7s ease-in-out;
